# react-native-vibration-feedback

./: OAT.XML  README.OpenSoure  README.md  index.d.ts  index.js  package.json
harmony/: vibration_feedback.har
harmony/vibration_feedback/: BuildProfile.ets  Index.ets  oh-package.json5  ts.ts
harmony/vibration_feedback/src/main/: module.json5
harmony/vibration_feedback/src/main/cpp/: CMakeLists.txt  ReactNativeVibrationFeedbackPackage.h
harmony/vibration_feedback/src/main/ets/: RNVibrationFeedbackModule.ts  RNVibrationFeedbackPackage.ts
harmony/vibration_feedback/src/main/resources/en_US/element/: string.json
harmony/vibration_feedback/src/main/resources/zh_CN/element/: string.json
src/: NativeVibrationFeedback.ts
